moved logic to ctrlrs, added a simple api doc.

--- a/views/createGroup.hbs
+++ b/views/createGroup.hbs
@@ -4,9 +4,60 @@
         <h1 class="center">Group Creation</h1>
         <div class="lead">
             Please use POST to create a group
+            Im working on this page.
         </div>
         <div class="section">
-            
+            <div class="row">
+                <form class="col s12">
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <input placeholder="Group Name" id="name" type="text" class="validate">
+                            <label for="name">Group Name</label>
+                        </div>
+                        <div class="input-field col s6">
+                            <input placeholder="Description" id="description" type="text" class="validate">
+                            <label for="description">Description</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <input placeholder="Start Time" id="start_time" type="datepicker" class="datepicker">
+                            {{!-- <label for="name">start time date picker</label> --}}
+                        </div>
+                        <div class="input-field col s6">
+                            <input id="duration" type="text" class="validate">
+                            <label for="duration">duration</label>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="location" type="text" class="validate">
+                            <label for="location">location</label>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <input id="max_ppl" class="validate">
+                            <label for="max_ppl">max ppl</label>
+                        </div>
+                        <div class="input-field col s6">
+                            <input id="joinable" type="checkbox" class="validate">
+                            <label for="joinable">joinable boolean</label>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="level" type="text" class="validate">
+                            <label for="level">level</label>
+                        </div>
+                    </div>
+                </form>
+            </div>
+
+            <button>OBJK</button>
         </div>
 
     </div>
